# contract-intelligence-agent

./: .env.example  .gitignore  AGENTS.md  EVAL.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  clause_extraction.py  qa.py  risk_assessment.py  state.py  supervisor.py
backend/app/api/: errors.py  router.py
backend/app/chunking/: __init__.py  fallback_splitter.py  service.py  structure_detector.py
backend/app/ingestion/: __init__.py  docx_parser.py  normalization.py  ocr.py  pdf_parser.py  quality.py  service.py
backend/app/llm/: errors.py  factory.py  gemini_provider.py  groq_provider.py  interface.py  llamacpp_provider.py  openrouter_provider.py  structured_output.py
backend/app/observability/: context.py  logging.py  middleware.py
backend/app/retrieval/: __init__.py  bm25.py  embeddings.py  index.py
backend/app/schemas/: __init__.py  analysis.py  api.py  chunks.py  clauses.py  documents.py  qa.py  retrieval.py  risks.py  sources.py
backend/app/services/: analysis_service.py  document_service.py  qa_service.py
backend/app/storage/: atomic.py  errors.py  locking.py  paths.py  repository.py
backend/eval/: __init__.py  report.py  runner.py  schemas.py
backend/eval/datasets/: phase5_dataset.json
backend/eval/metrics/: __init__.py  common.py
backend/eval/results/: latest.json
backend/tests/integration/: test_document_api.py  test_ingestion_fixtures.py  test_phase2_analysis.py  test_phase3_questions.py
(+45 files in other folders)
