[project]
name = "contract-intelligence-agent-backend"
version = "0.1.0"
description = "Backend for clause-aware contract intelligence"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn[standard]==0.35.0",
  "pydantic==2.11.7",
  "pydantic-settings==2.10.1",
  "python-multipart==0.0.20",
  "httpx==0.28.1",
  "PyMuPDF==1.26.3",
  "python-docx==1.2.0",
  "pytesseract==0.3.13",
  "pdf2image==1.17.0",
  "faiss-cpu==1.13.1",
  "langgraph==0.4.8",
  "sentence-transformers==5.1.2",
]

[project.optional-dependencies]
dev = [
  "pytest==8.4.1",
  "pytest-cov==6.2.1",
  "ruff==0.12.3",
  "mypy==1.16.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
